--- a/components/src/components/header/header.scss
+++ b/components/src/components/header/header.scss
@@ -11,6 +11,10 @@
   &:hover {
     background-color: var(--sdds-blue-700);
   }
+
+  &:focus {
+    @include sdds-focus-state;
+  }
 }
 
 // Style for Header itself
