--- a/components/src/components/link/link.scss
+++ b/components/src/components/link/link.scss
@@ -1,4 +1,5 @@
-@import '../../helpers/style-helpers.scss';
+@import "../../helpers/style-helpers.scss";
+@import "../../helpers/components-shared";
 
 .#{$prefix}-link {
   cursor: pointer;
@@ -26,7 +27,8 @@
   &:focus {
     color: var(--sdds-link-focus);
     text-decoration: none;
-    outline: var(--sdds-link-focus-border);
+
+    @include sdds-focus-state;
   }
 
   &:disabled,
