--- a/components/src/helpers/components-shared.scss
+++ b/components/src/helpers/components-shared.scss
@@ -19,3 +19,8 @@
     width: 0;
   }
 }
+
+@mixin sdds-focus-state {
+  outline: 2px solid var(--sdds-blue-400);
+  outline-offset: -2px;
+}
